# turingdb

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  :q  CMakeLists.txt  Dockerfile  MANIFEST.in  Makefile  README.md  build.sh  build_backend.py  dependencies.sh  pull.sh  pyproject.toml  run_regress.sh  setup.py  setup.sh  test_style_violations.cpp  tsvconvert.py  turing.setup.sh
app2-backend/: CMakeLists.txt  TuringApp2Server.cpp  build_with_git_hash.sh
db/: CMakeLists.txt  Component.cpp  Component.h  ComponentColumn.cpp  ComponentColumn.h  ComponentStorage.cpp  ComponentStorage.h  ComponentType.cpp  ComponentType.h  DB.cpp  DB.h  DBIndex.cpp  DBIndex.h  DBObject.h  Edge.cpp  Edge.h  Link.cpp  Link.h  LinkStore.cpp  LinkStore.h  LinkType.cpp  LinkType.h  Network.cpp  Network.h  NetworkAccessor.cpp  NetworkAccessor.h  NetworkNodeRange.cpp  NetworkNodeRange.h  Node.cpp  Node.h  NodeDescriptor.cpp  NodeDescriptor.h  NodeType.cpp  Object.cpp  Object.h  ObjectType.cpp  ObjectType.h  Property.cpp  PropertyStore.cpp  PropertyStore.h  (+14 more)
db/client/: CMakeLists.txt
db/client/native/: CMakeLists.txt  QueryResult.cpp  TuringClient.cpp  TuringClient.h  TuringClientImpl.cpp  TuringClientImpl.h  TuringConfig.h
db/client/python/: CMakeLists.txt
db/core/: CMakeLists.txt  DB.cpp  DB.h  DBAccessor.cpp  DBAccessor.h  DBEntity.cpp  DBEntity.h  DBEntityType.cpp  DBEntityType.h  DBIndex.cpp  DBIndex.h  DBNetworkRange.cpp  DBNetworkRange.h  DBObject.cpp  DBType.cpp  DBType.h  Edge.cpp  Edge.h  EdgeAccessor.cpp  EdgeAccessor.h  EdgeMap.cpp  EdgeMap.h  EdgeType.cpp  EdgeType.h  EntityID.h  LabelID.h  LabelIndex.cpp  LabelIndex.h  Network.cpp  Network.h  NetworkAccessor.h  NetworkEdgeRange.cpp  NetworkEdgeRange.h  NetworkNodeRange.h  Node.cpp  Node.h  NodeAccessor.cpp  NodeAccessor.h  NodeType.cpp  NodeType.h  (+20 more)
db/core/Comparators/: BaseClasses.cpp  Containers.cpp  MainObjects.cpp  Types.cpp
db/core/columns/: Column.h  ColumnVector.h
db/dbms/: CMakeLists.txt  DBManager.cpp  DBManager.h
db/dump/: DBDumper.cpp  DBDumper.h  DBLoader.cpp  EntityDumper.cpp  EntityLoader.cpp  EntityLoader.h  StringIndexDumper.cpp  StringIndexLoader.cpp  StringIndexLoader.h  TypeDumper.cpp  TypeLoader.cpp  TypeLoader.h
db/dump/capnp/: EntityIndex.capnp
db/filter/: Explorator.cpp  Explorator.h  NodeSearch.cpp  NodeSearch.h
db/proto/: CMakeLists.txt  DBService.proto
db/query/: ASTContext.cpp  ASTContext.h  CMakeLists.txt  ExecutionContext.cpp  ExecutionContext.h  Expr.cpp  Expr.h  Frame.cpp  Frame.h  FromTarget.cpp  FromTarget.h  Interpreter.cpp  Interpreter.h  InterpreterContext.h  QueryCommand.cpp  QueryCommand.h  QueryInterpreter.cpp  QueryInterpreter.h  QueryParser.cpp  QueryParser.h  QueryStatus.h  SelectField.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  YScanner.h  lexer.l  parser.y
db/query/interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h
db/query/parser/: CMakeLists.txt  PathPattern.cpp  PathPattern.h  QueryParser.cpp  QueryParser.h  parser.y
db/query/plan/: CMakeLists.txt  ListDBStep.cpp  ListDBStep.h  LogicalOperator.cpp  LogicalOperator.h  OpenDBStep.cpp  OpenDBStep.h  Planner.cpp  Planner.h  PullPlan.cpp  PullPlan.h  QueryPipeline.cpp  QueryPipeline.h  QueryPipelineBuilder.cpp  QueryPipelineBuilder.h  QueryPlan.cpp  QueryPlan.h  QueryPlanStep.h  SearchNodeStep.cpp  SearchNodeStep.h
db/query/processors/: CMakeLists.txt  Port.cpp  Port.h  Processor.cpp  Processor.h
db/serializer/: CMakeLists.txt
db/server/: CMakeLists.txt  DBServer.cpp  DBServer.h  DBServerHandler.cpp  DBServerHandler.h  DBServiceImpl.cpp  DBServiceImpl.h  DBSession.cpp  DBSession.h
db/stats/: CMakeLists.txt
import/jsonl/: CMakeLists.txt  JsonlImportResult.cpp  JsonlImportResult.h  JsonlParser.cpp  JsonlParser.h
import/metanetx/: CMakeLists.txt  MetaNetXLoader.cpp  MetaNetXLoader.h
io/s3/: AwsS3ClientWrapper.h  CMakeLists.txt  MinioS3ClientWrapper.cpp  MinioS3ClientWrapper.h  MockS3Client.cpp  MockS3Client.h  S3ClientResult.h  S3Result.cpp  S3Result.h  TuringS3Client.cpp  TuringS3Client.h
network/http_parser/: CMakeLists.txt  HTTPException.h  HTTPParser.cpp  HTTPParser.h  HTTPParsingInfo.h
regress/: CMakeLists.txt
regress/biorun/: test.list
regress/bulk_create_crash/: CMakeLists.txt  run.sh
regress/change_10/: run.sh
regress/count_simpledb/: run.sh
regress/create_turingdb_object/: run.sh
regress/delete_tests/: run.sh
regress/get_nodes_invalid_id/: CMakeLists.txt  main.py  run.sh
regress/neo4j_import/: run.sh
regress/read_script/: run.sh  test_script.cypher
regress/reset_default/: run.sh
regress/serialization/: main.py  run.sh
regress/wine_ontology/: wine_ontology.cypher
samples/index-serialisation/: CMakeLists.txt  main.cpp
samples/vm/: CMakeLists.txt  createdbs.turing  data.turing  iterators.turing  main.cpp  query_example.turing  utils.cpp  utils.h
samples/vm-utilslib/: CMakeLists.txt  vmutils.cpp  vmutils.h
scripts/codereview/: pyproject.toml
scripts/codereview/tests/: __init__.py  test_missing_const.py
test/import/csv/: 1_empty_line_end.csv  2_empty_line_end.csv  3_empty_line_end.csv  CMakeLists.txt  CSVImportTest.cpp  duplicates_in_header.csv  example1.csv  example_semicolon.csv  missing_cell_value.csv  missing_entry.csv  node_redefinition.csv  one_column.csv  only_strings.csv  strings_and_floats.csv  too_many_entries.csv  whitespaces.csv
test/query-test-suite/: CMakeLists.txt  QueryTestRunner.cpp  QueryTestRunner.h  QueryTestSuite.cpp  QueryTestSuiteCLI.cpp
test/query-test-suite/tests/: call-dependencies-0.json  call-dependencies-1.json  call-dependencies-2.json  call-meta-expression-string-succeed-empty.json  (+129 more)
tools/bioshell/: BioShell.cpp  CMakeLists.txt
tools/common/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  ToolInit.cpp  ToolInit.h
ui/backend/: BioserverCommand.cpp  BioserverCommand.h  CMakeLists.txt  ReactDevCommand.cpp  ReactDevCommand.h  ReactPrototypeDevCommand.cpp  ReactPrototypeDevCommand.h  ServerCommandEngine.cpp  ServerCommandEngine.h  SiteArchive.cpp  SiteArchive.h  TuringUIServer.cpp  TuringUIServer.h
(+1507 files in other folders)
