[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "turingdb"
version = "1.16"
dependencies = [
    "boto3>=1.42.22",
    "boto3-stubs>=1.42.22",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "prompt-toolkit>=3.0.52",
]
requires-python = ">=3.10"
classifiers = [
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/turing-db/turingdb"
Repository = "https://github.com/turing-db/turingdb"

[project.scripts]
turingdb = "turingdb:main"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-G", "Unix Makefiles", "-DCMAKE_MAKE_PROGRAM=/usr/bin/make"]
build.tool-args = ["-j8"]
build-dir = "build/"
wheel.packages = ["python/turingdb"]
wheel.exclude = [
    "regress/**",
    "samples/**",
    "test/**",
    "external/**",
    "common/**",
]

[tool.uv]
dev-dependencies = [
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.uv.workspace]
members = []
exclude = ["build/**"]
