[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "turingdb"
version = "1.16"
dependencies = [
    "boto3>=1.42.22",
    "boto3-stubs>=1.42.22",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "prompt-toolkit>=3.0.52",
]
requires-python = ">=3.10"
classifiers = ["Operating System :: POSIX :: Linux"]

[project.urls]
Homepage = "https://github.com/turing-db/turingdb"
Repository = "https://github.com/turing-db/turingdb"

[project.scripts]
turingdb = "turingdb:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
turingdb = ["bin/*"]

[tool.uv]
dev-dependencies = ["build>=0.10.0", "twine>=4.0.0"]

[tool.uv.workspace]
members = []
exclude = ["build/**"]
