[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "turingdb"
dynamic = ["version"]
dependencies = [
    "boto3>=1.42.22",
    "boto3-stubs>=1.42.22",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "prompt-toolkit>=3.0.52",
    "patchelf>=0.17.2.4",
    "delocate>=0.13.0",
    "auditwheel>=6.6.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/turing-db/turingdb"
Repository = "https://github.com/turing-db/turingdb"

[project.scripts]
turingdb = "turingdb:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
turingdb = ["bin/*"]

[tool.uv]
dev-dependencies = ["build>=0.10.0", "twine>=4.0.0"]

[tool.uv.workspace]
members = []
exclude = ["build/**"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
write_to = "python/turingdb/_version.py"
git_describe_command = "git describe --dirty --tags --long --match 'v*' --first-parent"
tag_regex = "^v(?P<version>.*)$"
